--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Clever/Partial/VehicleListItem.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Clever/Partial/VehicleListItem.cshtml
@@ -8,7 +8,7 @@
                     @Html.TextBlockFor(m => m.FahrzeugAsString, new Dictionary<string, object>())
                 </td>
                 <td>
-                    @* kann später einen Link o.ä. enthalten *@
+                    <button class="btn mini gray" onclick="ShowStatusverfolgungDetails('@Model.BelegNummer')">@Localize.Status</button>
                 </td>
             </tr>
         </table>
