Anpassungen zu ITA 8279, ITA 8693: neues Logo

--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen.cshtml
@@ -203,7 +203,7 @@
     }
 
     function DeletePosition(datensatzId) {
-        if (!confirm('@Localize.PositionDoYouReallyWantToDelete'))
+        if (!confirm('@Localize.PositionDoYouReallyWantToDelete.ToJavascriptString()'))
             return;
 
         $.ajax({
