--- a/inetpub/wwwroot/PortalZLD/MasterPage/Services.Master
+++ b/inetpub/wwwroot/PortalZLD/MasterPage/Services.Master
@@ -48,7 +48,7 @@
     <div id="website">
         <div id="header">
             <div id="headerContent" runat="server">
-                <asp:Image ID="imgLogo" ImageUrl="../Images/Kroschke.jpg" alt="Kroschke Logo" class="dadLogo2"
+                <asp:Image ID="imgLogo" ImageUrl="../Images/kroschke_inside_logo.png" alt="Kroschke Logo" class="dadLogo2"
                     runat="server" />
                 <div id="PlaceHeader" runat="Server" class="dvHead">
                 </div>
