--- a/inetpub/wwwroot/ZLDMobile/Views/Shared/Partial/_ImpressumPartial.cshtml
+++ b/inetpub/wwwroot/ZLDMobile/Views/Shared/Partial/_ImpressumPartial.cshtml
@@ -14,7 +14,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="~/Images/LogoHeaderKroschke.jpg" alt="Kroschke"/>
+                    <img src="~/Images/kroschke_inside_mobile_logo.png" alt="Kroschke" height="80px" width="240px" />
                 </td>
             </tr>
             <tr>
